[project]
name = "writing-agent"
version = "0.1.0"
description = "A Claude-powered writing assistant for blog content"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
writing-agent = "writing_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/writing_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"
